# rules_ros2

./: .gitignore  MODULE.bazel  requirements.txt  requirements_lock.txt
repositories/: rclcpp.BUILD.bazel  rcutils.BUILD.bazel  ros2_repo_mappings.yaml  ros2_repositories_impl.bzl  ros2cli.BUILD.bazel  rosidl.BUILD.bazel
repositories/patches/: rclcpp_component_manager.patch  rclcpp_include_functional_node_parameters.patch  ros2cli_init.patch
ros2/: cc_opts.bzl  interfaces.bzl  pytest_wrapper.py.tpl
tests/: .bazelrc  BUILD.bazel  MODULE.bazel  requirements_lock.txt
tests/diagnostics/: tests.py
tests/launch_pytest/: launch_pytest_test.py
tests/pluginlib/: ament_setup_library_tests.cc  plugin_tests.cc  py_loader.cc  py_loader_tests.py  ros2_cpp_binary_test.sh  ros2_py_binary_test.sh  square.cc  triangle.cc
tests/rosbag/: BUILD.bazel  tests.py
tests/rust/: BUILD.bazel
tests/xacro/: BUILD.bazel  sample2.xacro  test_with_params.xacro  tests.py
