module(
    name = "ros2_tests",
    version = "1.0.0",
)

# Required due to an issue with rules_ros2 / ros2_rosidl split
# this is required for py_ros2_interface_library
bazel_dep(name = "ros2_rosidl", version = "3.1.5.iw.1")

# Required due to an issue with rules_ros2 / ros2_launch_ros split
# this is required for ros2_test
bazel_dep(name = "ros2_launch_ros", version = "0.19.7.iw.1")
bazel_dep(name = "ros2_ament_cmake_ros", version = "0.10.0.iw.1")

# diagnostics tests
bazel_dep(name = "com_github_mvukov_rules_ros2", version = "1.0.0.eddy.2")
bazel_dep(name = "ros2_diagnostics", version = "3.0.0.17.g9f40278.iw.1")
bazel_dep(name = "ros2_rclcpp", version = "16.0.9.iw.1")
bazel_dep(name = "ros2_common_interfaces", version = "4.2.3.iw.1")
bazel_dep(name = "ros2_rclpy", version = "3.3.13.iw.1")
bazel_dep(name = "rules_python", version = "0.36.0")

# image_common tests
bazel_dep(name = "ros2_pluginlib", version = "5.1.0.iw.1")
bazel_dep(name = "ros2_image_common", version = "3.1.9.iw.1")
bazel_dep(name = "googletest", version = "1.14.0.bcr.1")

# pluginlib tests
bazel_dep(name = "pybind11", version = "2.13.6.iw.1")

# xacro tests
bazel_dep(name = "ros2_xacro", version = "2.0.9.iw.1")

# launch_pytest tests
bazel_dep(name = "ros2_launch", version = "1.0.6.iw.1")

# rosbag tests
bazel_dep(name = "ros2_rosbag2", version = "0.15.11.iw.1")
bazel_dep(name = "ros2_rcl_interfaces", version = "1.2.1.iw.1")

# local_path_override(
#     module_name = "com_github_mvukov_rules_ros2",
#     path = "../",
# )

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    configure_coverage_tool = True,
    python_version = "3.10",
)

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    hub_name = "ros2_tests_pip_deps",
    python_version = "3.10",
    requirements_lock = "//:requirements_lock.txt",
)
use_repo(pip, "ros2_tests_pip_deps")
